// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> renders close button 1`] = `
<div
  className="alert_1ypwfdz"
>
  <Row
    after={
      <withStyles(IconButton)
        onClick={[Function]}
      >
        <IconClose
          accessibilityLabel="Close"
          color="currentColor"
          flip={false}
          flipVertical={false}
          inline={false}
          size={24}
        />
      </withStyles(IconButton)>
    }
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      Title
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders inline 1`] = `
<div
  className="alert_1ypwfdz-o_O-alert_inline_36rlri"
>
  <Row
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      Title
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders danger alert 1`] = `
<div
  className="alert_1ypwfdz-o_O-alert_statusIcon_l3ubg1-o_O-alert_danger_67ky1g"
>
  <Row
    before={
      <IconError
        color="#DF2323"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      danger
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders info alert 1`] = `
<div
  className="alert_1ypwfdz-o_O-alert_statusIcon_l3ubg1-o_O-alert_info_1mewzye"
>
  <Row
    before={
      <IconInfo
        color="#6f44ff"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      info
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders muted alert 1`] = `
<div
  className="alert_1ypwfdz"
>
  <Row
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      muted
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders notice alert 1`] = `
<div
  className="alert_1ypwfdz-o_O-alert_statusIcon_l3ubg1-o_O-alert_notice_uvd2g5"
>
  <Row
    before={
      <IconFlag
        color="#1561B2"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      notice
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders success alert 1`] = `
<div
  className="alert_1ypwfdz-o_O-alert_statusIcon_l3ubg1-o_O-alert_success_1law0a4"
>
  <Row
    before={
      <IconCheckAlt
        color="#4AA83E"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      success
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders warning alert 1`] = `
<div
  className="alert_1ypwfdz-o_O-alert_statusIcon_l3ubg1-o_O-alert_warning_1hlm3ds"
>
  <Row
    before={
      <IconWarning
        color="#FFB400"
        decorative={true}
        flip={false}
        flipVertical={false}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      warning
    </Text>
  </Row>
</div>
`;
